kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
